test/files/pos/t175.scala
abstract class C {
  def this(x: Unit) = { this() }
}
