test/files/neg/bug118.scala
class C(y: Int) {
    def this() = {
    	this(1);
    	return null;
    }
}
